[package]
name = "ipnetwork"
version = "0.1.0"
authors = ["Loke Berne <loke.berne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true